# RF_subgraphILP

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  config.json  copy_files.py  pyproject.toml  sensetivity_count.tsv
data/: tuned_params.json
data/gdsc/: Discretized_Matrix_GDSC1_25Feb2020_3_11_2021_COSMIC_IDs.csv  Discretized_Matrix_GDSC2_25Feb2020_3_11_2021_COSMIC_IDs.csv  IC50_Matrix_GDSC1_25Feb2020_31_12_2020_COSMIC_IDs.csv  IC50_Matrix_GDSC2_25Feb2020_31_12_2020_COSMIC_IDs.csv  Thresholds_GDSC1_Calculated_Using_LOBICO_Method_29_01_2021.csv  Thresholds_GDSC2_Calculated_Using_LOBICO_Method_29_01_2021.csv  drugs_targets.txt
data/kegg/: intersections.py  kegg_hsa.Entrez-Gene.na  kegg_hsa.aggregate.na  kegg_hsa.sif  score.na
manager/: config.py  train.py  utils.py
manager/data/: data_split.py  files_preprocessing.py  filter_drugs.py  gene_matrix_processing.py  inspect_trees_info.py  network_processing.py  post_process_results.py
manager/models/: biased_criterion.pyx  biased_random_forest.py  random_forest.py  setup.py  subgraphilp_model.py
manager/plots/: main.py  plot_functions.py  plot_helpers.py  plot_leveled.py  process_results.py
manager/scoring_metrics/: scoring.py  utils.py
manager/supplementary/: gcsi.py  nci60.py  nibr_pdxe.py  plot_databases_distributions.py
manager/training/: cross_validation.py  feature_selection.py  grid_search_cv.py  random_forest.py  scoring.py  subgraphilp.py  train_best_parameters.py  (+2 more)
manger/: config.py  train.py  train_final.py  utils.py
regression_weighted_biased_gt_750/: computed_num_features.json
(+55 files in other folders)
