[tool.poetry]
name = "subgraphILP biased network"
version = "0.1.0"
description = ""
authors = ["Afnan Sultan"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.4.1"
tqdm = "^4.63.0"
matplotlib = "^3.5.1"
pydantic = "^1.9.1"
scipy = "^1.9.1"
typer = "^0.6.1"
joblib = "^1.2.0"
scikit-learn = "^1.2.1"
Cython = "^0.29.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
